# exatn

./: .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  CMakeLists.txt  ExaTN.tif  LICENSE  README.md  development.txt  gnu_asan_flags.txt  install_python_deps.sh  monitor.sh
cmake/: exatn-config.cmake.in  (+1 more)
python/: CMakeLists.txt  exatn-py.cpp  exatn.py  exatn_py_utils.hpp
python/examples/: benchmark.py  circuit_conjugate.py  contraction.py  hamiltonian.py  hypercontraction.py  large_circuit.py  quantum_circuit_network.py  simple.py  tensor_basic.py  test_creation_from_array_print_and_transform.py  test_exatn_interface_data_from_numpy_dot_product.py
python/examples/resources/: test-cases.txt
python/tests/: CMakeLists.txt  exatn_py_api_tester.cpp  test-mpi-client.py  test-numerics-client.py  test-numericsServer-easy.py  test-numericsServer.py  test-tensorRuntime.py  test_creation_from_array_print_and_transform.py  test_exatn_interface_data_from_numpy_dot_product.py  test_functor.py
src/: CMakeLists.txt  exatn.cpp  exatn.hpp
src/client/: DriverClient.hpp
src/client/mpi/: MPIClient.hpp
src/driver-rpc/: CMakeLists.txt  DriverClient.hpp  DriverServer.hpp
src/driver-rpc/mpi/: CMakeLists.txt  MPIClient.cpp  MPIClient.hpp  MPIDriverRPCActivator.cpp  MPIRPCActivator.cpp  MPIServer.cpp  MPIServer.hpp  manifest.json
src/driver-rpc/mpi/tests/: CMakeLists.txt  README.md  client.cpp  server.cpp
src/driver_rpc/: DriverClient.hpp  DriverServer.hpp
src/driver_rpc/mpi/: CMakeLists.txt  MPIClient.cpp  MPIClient.hpp  MPIServer.cpp  manifest.json
src/driver_rpc/mpi/tests/: CMakeLists.txt  MPIRPCTester.cpp
src/exatn/: CMakeLists.txt  Identifiable.hpp  ServiceRegistry.cpp  ServiceRegistry.hpp  eigensolver.cpp  eigensolver.hpp  exatn.cpp  exatn.hpp  exatn_numerics.hpp  exatn_service.cpp  exatn_service.hpp  linear_solver.cpp  linear_solver.hpp  num_server.cpp  num_server.hpp  numerics.hpp  optimizer.cpp  optimizer.hpp  quantum.cpp  quantum.hpp  reconstructor.cpp  reconstructor.hpp  remapper.cpp  remapper.hpp
src/exatn/tests/: CMakeLists.txt  NumServerTester.cpp  ServiceRegistryTester.cpp  hubbard.py  hubbard_2x2_8q.ofn.txt  hubbard_result.txt  mcvqe_16q.qcw.txt  mcvqe_24q.qcw.txt  mcvqe_32q.qcw.txt  mcvqe_40q.qcw.txt  mcvqe_48q.qcw.txt  mcvqe_8q.fci.txt  mcvqe_8q.qcw.txt  mcvqe_8q.txt  sycamore_12_cnot.txt  sycamore_8_cnot.txt
src/exatn/tests/testplugin/: CMakeLists.txt  manifest.json
src/numerics/: CMakeLists.txt  backend.hpp  basis_vector.cpp  basis_vector.hpp  contraction_seq_optimizer.cpp  contraction_seq_optimizer.hpp  contraction_seq_optimizer_cutnn.cpp  contraction_seq_optimizer_cutnn.hpp  contraction_seq_optimizer_dummy.cpp  contraction_seq_optimizer_dummy.hpp  contraction_seq_optimizer_factory.cpp  contraction_seq_optimizer_factory.hpp  contraction_seq_optimizer_greed.cpp  contraction_seq_optimizer_greed.hpp  contraction_seq_optimizer_heuro.cpp  contraction_seq_optimizer_heuro.hpp  contraction_seq_optimizer_metis.cpp  contraction_seq_optimizer_metis.hpp  functor_diag_rank.cpp  functor_diag_rank.hpp  functor_init_dat.cpp  functor_init_dat.hpp  functor_init_delta.cpp  functor_init_delta.hpp  functor_init_file.cpp  functor_init_file.hpp  functor_init_proj.cpp  functor_init_proj.hpp  functor_init_rnd.cpp  functor_init_rnd.hpp  functor_init_unity.cpp  functor_init_unity.hpp  functor_init_val.cpp  functor_init_val.hpp  functor_isnan.cpp  functor_isnan.hpp  functor_isometrize.cpp  functor_isometrize.hpp  functor_maxabs.cpp  functor_maxabs.hpp  (+98 more)
src/numerics/cotengra/: CMakeLists.txt  contraction_seq_optimizer_cotengra.hpp  manifest.json  py-cotengra-optimizer.in.cpp
src/numerics/cotengra/tests/: CotengraTester.cpp
src/numerics/exatensor/: CMakeLists.txt  ExatensorActivator.cpp  exatensor_backend.cpp  exatensor_backend.hpp  manifest.json
src/numerics/talsh/: CMakeLists.txt  TalshActivator.cpp  manifest.json  talsh_backend.cpp  talsh_backend.hpp
src/numerics/tests/: CMakeLists.txt  NumericsTester.cpp
src/parser/: CMakeLists.txt  TAProL.g4  TAProL.spec.txt  TAProLInterpreter.cpp  TAProLInterpreter.hpp  TAProLListener.cpp  TAProLListener.hpp  TAProLListenerCPPImpl.cpp  TAProLListenerCPPImpl.hpp  TAProLListenerImpl.cpp  TAProLListenerImpl.cpp.old  TAProLListenerImpl.hpp  TAProLListenerImpl.hpp.old  generate.sh
src/parser/generated_old/: TAProL.tokens  TAProLBaseListener.cpp  TAProLBaseListener.h  TAProLLexer.cpp  TAProLLexer.h  TAProLParser.h
src/parser/syntax_handler/: CMakeLists.txt  taprol_syntax_handler.cpp
src/parser/syntax_handler/examples/: CMakeLists.txt  README.md  simple.cpp
src/parser/tests/: CMakeLists.txt  TAProLInterpreterTester.cpp
src/runtime/: CMakeLists.txt  TensorRuntime.cpp  TensorRuntime.hpp  mpi_proxy.cpp  mpi_proxy.hpp  runtime.hpp  tensor_exec_state.cpp  tensor_runtime.cpp  tensor_runtime.hpp  timers.hpp
src/runtime/cotengra/: CMakeLists.txt  py-cotengra-optimizer.cpp  py-cotengra-optimizer.in.cpp
src/runtime/executor/: CMakeLists.txt  ExecutorActivator.cpp  GraphExecutor.cpp  GraphExecutor.hpp  GraphExecutorActivator.cpp  NodeExecutorActivator.cpp  executor_activator.cpp  manifest.json  tensor_graph_executor.hpp  tensor_node_executor.hpp
src/runtime/graph/: CMakeLists.txt  Graph.hpp  GraphActivator.cpp  TensorGraph.hpp  manifest.json  tensor_exec_state.cpp  tensor_exec_state.hpp  tensor_graph.hpp
src/runtime/obsolete/: scheduler.hpp
src/runtime/optimizer/: CMakeLists.txt  GraphOptimizer.hpp  OptimizerActivator.cpp  TensorGraphOptimizer.hpp  manifest.json  tensor_graph_optimizer.hpp
src/runtime/tests/: CMakeLists.txt  TensorRuntimeTester.cpp
src/scripts/: CMakeLists.txt  exatn-config.cmake.in  exatn-config.in
src/scripts/tests/: CMakeLists.txt  README.md  test.cpp
src/utility/: CMakeLists.txt  ServiceRegistry.cpp  ServiceRegistry.hpp  TNRepConverter.hpp  timer.cpp  timer.hpp
src/utility/srep/: Srep2TaProl.cpp  Srep2TaProl.hpp
src/utility/tests/: CMakeLists.txt  ServiceRegistryTester.cpp
src/utils/: CMakeLists.txt  errors.hpp  metadata.hpp  mpi_proxy.cpp  mpi_proxy.hpp  param_conf.hpp
tpls/: CMakeLists.txt
(+75 files in other folders)
